--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jalen Parham",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
   }
 }
