--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "serve": "nodemon server/server.js",
     "test": "mocha server/**/*.test.js",
-    "text-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "10.13.0"
